fix: add top spacing to p5.js logo in side navigation (2.0)

--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -68,6 +68,7 @@
       display: flex;
       gap: var(--spacing-xs);
       padding: 0;
+      margin-top: 20px;
       margin-bottom: 10px;
       a {
         height: unset;
